<resources>
    <string name="app_name">My Idea</string>
    <string-array name="nav_drawer_items">
        <item>Home</item>
        <item>My Compositions</item>
        <item>Layouts</item>
        <!-- <item>Third</item> -->
    </string-array>
    <array name="nav_drawer_icons">
        <item>@drawable/ic_launcher</item>
        <item>@drawable/ic_launcher</item>
        <item>@drawable/ic_launcher</item>
    </array>
    <string name="take_picture">Take a picture</string>
    <string name="write_idea">Write an idea</string>
    <string name="make_tweet">Make a tweet</string>
    <string name="save_it">Save the picture</string>
    <string name="txtIdea">Heureka !!!</string>
    <string name="save_layout">Save Layout</string>
    <string name="new_composition">New Composition</string>
    <string name="compoTitle">Title</string>
    <string name="compoDescription">Description</string>
    <string name="btnSaveComposition">Save</string>
    <string name="btnCancelSaveCompo">Cancel</string>
    <string name="txt_willkommen">Lorem ipsum dolor sit amet, consetetur sadipscing elitr,
        sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat,
        sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum.</string>
</resources>
