<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- The main content view -->
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:baselineAligned="false"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_composition"
            android:id="@+id/txtViewTitle"
            android:layout_gravity="center_horizontal"
            android:textSize="25dp"
            android:textStyle="normal|bold"
            android:layout_marginTop="10dp" />

        <EditText
            android:layout_width="241dp"
            android:layout_height="wrap_content"
            android:id="@+id/editTxtCompoTitle"
            android:layout_gravity="center_horizontal"
            android:autoText="false"
            android:text="@string/compoTitle"
            android:textAlignment="center"
            android:layout_marginTop="150dp"
            android:imeOptions="actionDone" />

        <EditText
            android:layout_width="241dp"
            android:layout_height="wrap_content"
            android:id="@+id/editTxtCompoDescription"
            android:layout_gravity="center_horizontal"
            android:autoText="false"
            android:text="@string/compoDescription"
            android:textAlignment="center"
            android:layout_marginTop="10dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnCancelSaveCompo"
                android:id="@+id/btnCancelSaveComposition"
                android:layout_marginStart="76dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="10dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnSaveComposition"
                android:id="@+id/btnSaveComposition"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@+id/btnCancelSaveComposition"
                android:layout_marginTop="10dp" />

        </RelativeLayout>

    </LinearLayout>

    <!-- The navigation drawer -->

    <ListView
        android:id="@+id/left_drawer"
        android:layout_width="260dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="#1a1c25"
        android:choiceMode="singleChoice"
        android:divider="@android:color/transparent"
        android:dividerHeight="0dp" />


</android.support.v4.widget.DrawerLayout>